# agent-framework

./: .gitignore  agent-framework.sln
.github/: CODEOWNERS
.github/actions/azure-functions-integration-setup/: action.yml
.github/workflows/: dotnet-build-and-test.yml  python-merge-tests.yml  python-test-coverage-report.yml
dotnet/: Directory.Packages.props  agent-framework-dotnet.slnx
dotnet/nuget/: nuget-package.props
dotnet/samples/: README.md
dotnet/samples/AGUIClientServer/: README.md
dotnet/samples/AzureFunctions/: .editorconfig  README.md
dotnet/samples/GettingStarted/: README.md
dotnet/src/Microsoft.Agents.AI/: Microsoft.Agents.AI.csproj
dotnet/src/Microsoft.Agents.AI.AGUI/: AGUIChatClient.cs  Microsoft.Agents.AI.AGUI.csproj
dotnet/src/Microsoft.Agents.AI.Abstractions/: AgentRunOptions.cs
dotnet/src/Microsoft.Agents.AI.DevUI/: DevUIExtensions.cs  EntitiesApiExtensions.cs  MetaApiExtensions.cs  Microsoft.Agents.AI.DevUI.Frontend.targets  README.md
dotnet/src/Microsoft.Agents.AI.DurableTask/: AIAgentExtensions.cs  AgentEntity.cs  AgentRunHandle.cs  AgentSessionId.cs  DefaultDurableAgentClient.cs  DurableAIAgent.cs  DurableAIAgentProxy.cs  DurableAgentContext.cs  DurableAgentJsonUtilities.cs  DurableAgentRunOptions.cs  DurableAgentThread.cs  DurableAgentsOptions.cs  EntityAgentWrapper.cs  IAgentResponseHandler.cs  IDurableAgentClient.cs  Logs.cs  Microsoft.Agents.AI.DurableTask.csproj  README.md  RunRequest.cs  ServiceCollectionExtensions.cs  TaskOrchestrationContextExtensions.cs
dotnet/src/Microsoft.Agents.AI.Hosting/: AgentHostingServiceCollectionExtensions.cs  HostedAgentBuilderExtensions.cs
dotnet/src/Microsoft.Agents.AI.Hosting.A2A/: AIAgentExtensions.cs  Microsoft.Agents.AI.Hosting.A2A.csproj
dotnet/src/Microsoft.Agents.AI.Hosting.A2A.AspNetCore/: EndpointRouteBuilderExtensions.cs
dotnet/src/Microsoft.Agents.AI.Hosting.AGUI.AspNetCore/: AGUIChatResponseUpdateStreamExtensions.cs  AGUIEndpointRouteBuilderExtensions.cs  AGUIJsonSerializerOptions.cs  Microsoft.Agents.AI.Hosting.AGUI.AspNetCore.csproj  ServiceCollectionExtensions.cs
dotnet/src/Microsoft.Agents.AI.Hosting.AzureFunctions/: BuiltInFunctionExecutor.cs  BuiltInFunctions.cs  CHANGELOG.md  DefaultFunctionsAgentOptionsProvider.cs  DurableAgentFunctionMetadataTransformer.cs  DurableAgentsOptionsExtensions.cs  DurableTaskClientExtensions.cs  FunctionsAgentOptions.cs  FunctionsApplicationBuilderExtensions.cs  HttpTriggerOptions.cs  IFunctionsAgentOptionsProvider.cs  Logs.cs  McpToolTriggerOptions.cs  Microsoft.Agents.AI.Hosting.AzureFunctions.csproj  README.md
dotnet/src/Microsoft.Agents.AI.Hosting.OpenAI/: EndpointRouteBuilderExtensions.Responses.cs  OpenAIHostingJsonUtilities.cs
dotnet/src/Microsoft.Agents.AI.Workflows/: ChatForwardingExecutor.cs
dotnet/tests/Microsoft.Agents.AI.AGUI.UnitTests/: AGUIChatClientTests.cs  (+6 more)
python/: CHANGELOG.md  pyproject.toml
python/samples/: README.md
python/samples/demos/chatkit-integration/frontend/: package-lock.json  package.json
python/samples/getting_started/agents/azure_ai/: README.md  azure_ai_basic.py  azure_ai_use_latest_version.py  azure_ai_with_azure_ai_search.py  azure_ai_with_code_interpreter.py  azure_ai_with_existing_agent.py  azure_ai_with_existing_conversation.py  azure_ai_with_explicit_settings.py  azure_ai_with_file_search.py  azure_ai_with_hosted_mcp.py  azure_ai_with_image_generation.py  azure_ai_with_response_format.py  azure_ai_with_thread.py  azure_ai_with_web_search.py
python/samples/getting_started/agents/azure_ai_agent/: README.md  azure_ai_basic.py  azure_ai_with_azure_ai_search.py  azure_ai_with_bing_grounding.py  azure_ai_with_code_interpreter.py  azure_ai_with_existing_agent.py  azure_ai_with_existing_thread.py  azure_ai_with_explicit_settings.py  azure_ai_with_file_search.py  azure_ai_with_function_tools.py  azure_ai_with_hosted_mcp.py  azure_ai_with_local_mcp.py  azure_ai_with_multiple_tools.py  azure_ai_with_openapi_tools.py  azure_ai_with_thread.py
python/samples/getting_started/agents/azure_openai/: azure_responses_client_with_local_mcp.py
python/samples/getting_started/agents/openai/: README.md  openai_chat_client_with_web_search.py  openai_responses_client_streaming_image_generation.py  openai_responses_client_with_file_search.py  openai_responses_client_with_web_search.py
python/samples/getting_started/azure_functions/: README.md
python/samples/getting_started/azure_functions/01_single_agent/: README.md  demo.http  function_app.py  host.json  requirements.txt
python/samples/getting_started/azure_functions/02_multi_agent/: README.md  demo.http  function_app.py
python/samples/getting_started/azure_functions/03_callbacks/: README.md  demo.http  function_app.py
python/samples/getting_started/azure_functions/04_single_agent_orchestration_chaining/: README.md  demo.http  function_app.py
python/samples/getting_started/azure_functions/05_multi_agent_orchestration_concurrency/: README.md  demo.http  function_app.py
python/samples/getting_started/azure_functions/06_multi_agent_orchestration_conditionals/: README.md  demo.http  function_app.py  local.settings.json.template
python/samples/getting_started/azure_functions/07_single_agent_orchestration_hitl/: README.md  demo.http  function_app.py  requirements.txt
python/samples/getting_started/devui/: .env.example  .gitignore
python/samples/getting_started/devui/spam_workflow/: workflow.py
python/samples/getting_started/devui/weather_agent_azure/: agent.py
python/samples/getting_started/devui/workflow_agents/: workflow.py
python/samples/getting_started/observability/: README.md
python/samples/getting_started/workflows/: README.md
python/samples/getting_started/workflows/human-in-the-loop/: agents_with_approval_requests.py
python/samples/getting_started/workflows/orchestration/: handoff_return_to_previous.py
python/samples/semantic-kernel-migration/orchestrations/: concurrent_basic_AF.py  concurrent_basic_AF_Sample2.py  sequential_AF.py
schemas/: durable-agent-entity-state.json
workflow-samples/: README.md
(+210 files in other folders)
